--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3386,6 +3386,23 @@
         <service android:name=".fuelgauge.batterytip.AnomalyDetectionJobService"
                  android:permission="android.permission.BIND_JOB_SERVICE" />
 
+	<!-- /e/ specific changes -->
+        <activity android:name="Settings$MicroGActivity"
+            android:label="@string/micro_g"
+            android:icon="@drawable/ic_microg_settings">
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.MICROG_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="6">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.homepage" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.MicroGSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
